--- a/scripts/install
+++ b/scripts/install
@@ -74,7 +74,7 @@ ynh_system_user_create --username=$app --home_dir="$final_path"
 #=================================================
 # CREATE A MYSQL DATABASE
 #=================================================
-# ynh_script_progression --message="Creating a MySQL database..." --time --weight=1
+# ynh_script_progression --message="Creating a MySQL database..." --weight=2
 
 # db_name=$(ynh_sanitize_dbid --db_name=$app)
 # db_user=$db_name
@@ -120,12 +120,12 @@ chown -R $app:www-data "$datadir"
 #=================================================
 # ADD A CONFIGURATION
 #=================================================
-# ynh_script_progression --message="Adding a configuration file..." --time --weight=1
+# ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-# ynh_add_config --template="some_config_file" --destination="$final_path/some_config_file"
+# ynh_add_config --template="../conf/.env" --destination="$final_path/.env"
 
-# chmod 400 "$final_path/some_config_file"
-# chown $app:$app "$final_path/some_config_file"
+# chmod 400 "$final_path/.env"
+# chown $app:$app "$final_path/.env"
 
 #=================================================
 # SETUP SYSTEMD
