--- a/scripts/install
+++ b/scripts/install
@@ -138,6 +138,11 @@ ynh_script_progression --message="Configuring log rotation..." --weight=1
 # Use logrotate to manage application logfile(s)
 ynh_use_logrotate
 
+# Create log directory
+mkdir -p /var/log/$app
+touch /var/log/$app/$app.log
+chown $app -R /var/log/$app
+
 #=================================================
 # INTEGRATE SERVICE IN YUNOHOST
 #=================================================
