--- a/scripts/install
+++ b/scripts/install
@@ -138,7 +138,7 @@ yunohost service add $app --description="Simple bookmark manager" --log="/var/lo
 ynh_script_progression --message="Starting a systemd service..." --weight=1
 
 # Start a systemd service
-ynh_systemd_action --service_name=$app --action="start" --log_path="/var/log/$app/$app.log"
+ynh_systemd_action --service_name=$app --action="start" --log_path="systemd"
 
 #=================================================
 # SETUP SSOWAT
