--- a/scripts/install
+++ b/scripts/install
@@ -101,13 +101,13 @@ chmod -R o-rwx "$datadir"
 chown -R $app:www-data "$datadir"
 
 #=================================================
-# INSTALL THE SHIORI
+# MIGRATE DATABASE
 #=================================================
-ynh_script_progression --message="Migrate database..." --weight=10
+# ynh_script_progression --message="Migrate database..." --weight=10
 
-pushd $final_path
-	./shiori migrate
-popd
+# pushd $final_path
+# 	./shiori migrate
+# popd
 
 #=================================================
 # SETUP SYSTEMD
