--- a/scripts/install
+++ b/scripts/install
@@ -105,9 +105,9 @@ chown -R $app:www-data "$datadir"
 #=================================================
 ynh_script_progression --message="Migrate database..." --weight=10
 
-pushd $final_path
-	./shiori migrate
-popd
+# pushd $final_path
+# 	./shiori migrate
+# popd
 
 #=================================================
 # SETUP SYSTEMD
