--- a/scripts/install
+++ b/scripts/install
@@ -102,7 +102,7 @@ chown -R $app:www-data "$datadir"
 
 # Run migrate for new install go-shiori/shiori#447
 pushd $final_path/
-	sudo -u $app final_path/shiori serve --port $port --webroot $path_url
+	sudo -u $app $final_path/shiori serve --port $port --webroot $path_url
 popd
 
 #=================================================
