--- a/scripts/install
+++ b/scripts/install
@@ -102,9 +102,9 @@ chown -R $app:www-data "$datadir"
 
 # Run migrate for new install go-shiori/shiori#447
 pushd $final_path/
-	sudo -u $app $final_path/shiori --portable migrate
-	sudo -u $app mv shiori-data/shiori.db $datadir
-	rm -r shiori-data
+	ynh_exec_as $app $final_path/shiori --portable migrate
+	ynh_exec_as $app mv shiori-data/shiori.db $datadir
+	ynh_secure_remove --file=$final_path/shiori-data
 popd
 
 #=================================================
