--- a/scripts/install
+++ b/scripts/install
@@ -43,6 +43,16 @@ chown $app -R /var/log/$app
 yunohost service add $app --description="Simple bookmark manager" --log="/var/log/$app/$app.log"
 
 #=================================================
+# ADD A CONFIGURATION
+#=================================================
+ynh_script_progression --message="Adding a configuration file..." --weight=1
+
+ynh_add_config --template="../conf/.env" --destination="$install_dir/.env"
+
+chmod 400 "$install_dir/.env"
+chown $app:$app "$install_dir/.env"
+
+#=================================================
 # START SYSTEMD SERVICE
 #=================================================
 ynh_script_progression --message="Starting a systemd service..." --weight=1
