--- a/scripts/install
+++ b/scripts/install
@@ -13,6 +13,16 @@ ynh_setup_source --dest_dir="$install_dir"
 chmod +x "$install_dir/shiori"
 
 #=================================================
+# APP INITIAL CONFIGURATION
+#=================================================
+ynh_script_progression "Adding $app's configuration files..."
+
+ynh_add_config --template=".env" --destination="$install_dir/.env"
+
+chmod 400 "$install_dir/.env"
+chown "$app:$app" "$install_dir/.env"
+
+#=================================================
 # SYSTEM CONFIGURATION
 #=================================================
 ynh_script_progression "Adding system configurations related to $app ..."
