--- a/scripts/install
+++ b/scripts/install
@@ -16,9 +16,16 @@ ynh_setup_source --dest_dir="$install_dir"
 chmod +x "$install_dir/shiori"
 
 #=================================================
+# APP INITIAL CONFIGURATION
+#=================================================
+ynh_script_progression "Adding $app's configuration files..."
+
+ynh_config_add --template=".env" --destination="$install_dir/.env"
+
+#=================================================
 # SYSTEM CONFIGURATION
 #=================================================
-ynh_script_progression "Adding system configurations related to $app ..."
+ynh_script_progression "Adding system configurations related to $app..."
 
 ynh_config_add_nginx
 
