--- a/scripts/install
+++ b/scripts/install
@@ -9,7 +9,7 @@ source /usr/share/yunohost/helpers
 
 ynh_app_setting_set --key=protect_against_basic_auth_spoofing --value=false
 
-key=$(ynh_string_random --length=45 | base64)
+key=$(ynh_string_random --length=32)
 ynh_app_setting_set --app=$app --key=key --value=$key
 
 #=================================================
