--- a/scripts/install
+++ b/scripts/install
@@ -45,7 +45,7 @@ yunohost service add $app --description="Simple bookmark manager" --log="/var/lo
 #=================================================
 ynh_script_progression "Starting $app's systemd service..."
 
-ynh_systemctl --service=$app --action="start" --log_path="systemd"
+ynh_systemctl --service=$app --action="start"
 
 #=================================================
 # END OF SCRIPT
